--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "node chatroom",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+      "start": "node index.js"
   },
-  "start": "node index.js",
   "author": "",
   "license": "ISC",
   "dependencies": {
